--- a/stream/templates/index.html
+++ b/stream/templates/index.html
@@ -21,10 +21,12 @@
         {% csrf_token %}
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Enter Group Name:</label>
-          <input type="text" class="form-control" name="room">
+          <input type="text" class="form-control" name="room" id="room">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+      <a type="button" class="btn btn-primary" id="meet">Create meeting link</a>
+      <br><p id="abc"></p>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
@@ -33,3 +35,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
+<script>
+    const but = document.getElementById("meet");
+    const text = document.getElementById("abc");
+    function generateRandomString(length) {
+      var characters = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
+      var randomString = '';
+      for (var i = 0; i < length; i++) {
+        randomString += characters.charAt(Math.floor(Math.random() * characters.length));
+      }
+      return randomString;
+    }
+    but.onclick = () => {
+      text.innerHTML = '';
+      const p = generateRandomString(8);
+      text.innerHTML += p;
+    }
+</script>
