--- a/stream/templates/index.html
+++ b/stream/templates/index.html
@@ -23,7 +23,7 @@
           <label for="exampleInputEmail1" class="form-label">Enter Group Name:</label>
           <input type="text" class="form-control" name="room" id="room">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">join room</button>
       </form>
       <a type="button" class="btn btn-primary" id="meet">Create meeting link</a>
       <br><p id="abc"></p>
